processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__fast__tests__all_ops__test_basic_block__stack_inputs_09_vec__Felt__from_u32_1__Felt__from_u32_2__Felt__from_u32_3__Felt___operations_65_vec__Operation__BCompress_.snap
---
source: processor/src/fast/tests/all_ops.rs
assertion_line: 134
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            3583961704833615255,
            3805394833813656517,
            16349957566370771690,
            17171587194350603304,
            0,
            0,
            0,
            0,
        ],
    },
)
