processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__fast__tests__all_ops__test_basic_block__stack_inputs_09_vec__Felt__from_u32_1__Felt__from_u32_2__Felt__from_u32_3__Felt___operations_65_vec__Operation__HPerm_.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            12175850710574191021,
            13800397389470483709,
            10717919348058185020,
            5151936205780666844,
            10291964643087183853,
            14779717229392016912,
            14290514441950687491,
            13791650757144473752,
            15845077848276659080,
            16000617562050663817,
            13055526489431477437,
            6605640152688323436,
            0,
            0,
            0,
            0,
        ],
    },
)
